💄 (code): Correct minor typos and formatting inconsistencies across the project